--- a/index.html
+++ b/index.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-  <!-- Rating state start -->
+  <main>
+    <!-- Rating state start -->
+    <section class="card">
+      <form class="card__inner">
+        <h2>
+          How did we do?
+        </h2>
+        <p>
+          Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!
+        </p>
 
-  How did we do?
+        <div class="ratings-group">
+          <div class="control-group">
+            <input id="rating-1" type="radio" name="rating" value="1" tabindex="-1"/>
+            <label for="rating-1" tabindex="0">1</label>
+          </div>
+          <div>
+            <input id="rating-2" type="radio" name="rating" value="2" tabindex="-1"/>
+            <label for="rating-2" tabindex="0">2</label>
+          </div>
+          <div>
+            <input id="rating-3" type="radio" name="rating" value="3" tabindex="-1"/>
+            <label for="rating-3" tabindex="0">3</label>
+          </div>
+          <div>
+            <input id="rating-4" type="radio" name="rating" value="4" tabindex="-1"/>
+            <label for="rating-4" tabindex="0">4</label>
+          </div>
+          <div>
+            <input id="rating-5" type="radio" name="rating" value="5" tabindex="-1"/>
+            <label for="rating-5" tabindex="0">5</label>
+          </div>
+        </div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
 
-  1 2 3 4 5
-
-  Submit
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+  </main>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
+  <section style="display: none;">
+    You selected <!-- Add rating here --> out of 5
 
-  You selected <!-- Add rating here --> out of 5
+    Thank you!
 
-  Thank you!
+    We appreciate you taking the time to give a rating. If you ever need more support,
+    don’t hesitate to get in touch!
 
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  </section>
+
 
   <!-- Thank you state end -->
 
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="scripts.js"></script>
 </body>
+
 </html>
